RESOLVED FIXED44683
[GTK] [PATCH] plugin loading invalid symlink evaluation deadlock
https://bugs.webkit.org/show_bug.cgi?id=44683
Summary [GTK] [PATCH] plugin loading invalid symlink evaluation deadlock
Stanislav Brabec
Reported 2010-08-26 06:49:57 PDT
Created attachment 65554 [details] libwebkit-plugins-gtk-load.patch PluginPackageGtk.cpp:PluginPackage::load() evaluates symlinks in a way that never worked: https://bugzilla.gnome.org/show_bug.cgi?id=627491 Attached patch fixes deadlock that happens if the plugin symlink points to ../something. For example: In openSUSE 11.3, plugindir is /usr/lib64/browser-plugins. opensc-signer.so is a link to ../opensc-signer.so. The result of current symlink resolving is /usr/lib64/browser-plugins/opensc-signer.so. Dead loop happens.
Attachments
libwebkit-plugins-gtk-load.patch (892 bytes, patch)
2010-08-26 06:49 PDT, Stanislav Brabec
no flags
Patch with ChangeLog (1.63 KB, patch)
2010-08-26 14:25 PDT, Martin Robinson
no flags
Martin Robinson
Comment 1 2010-08-26 14:25:42 PDT
Created attachment 65617 [details] Patch with ChangeLog
Martin Robinson
Comment 2 2010-08-26 14:31:36 PDT
Comment on attachment 65617 [details] Patch with ChangeLog I've reposted Stanislav's patch with a ChangeLog. This fix looks good to me.
Martin Robinson
Comment 3 2010-08-26 14:34:12 PDT
Comment on attachment 65617 [details] Patch with ChangeLog Clearing flags on attachment: 65617 Committed r66138: <http://trac.webkit.org/changeset/66138>
Martin Robinson
Comment 4 2010-08-26 14:34:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.