2010-08-26   Stanislav Brabec  <sbrabec@suse.cz>

Reviewed by Martin Robinson.

        [GTK] [PATCH] plugin loading invalid symlink evaluation deadlock
        https://bugs.webkit.org/show_bug.cgi?id=44683

        Fix symlink resolution in PluginPackageGtk.

        * plugins/gtk/PluginPackageGtk.cpp:
        (WebCore::PluginPackage::load): g_file_resolve_relative_path must be called with a
        a directory, not a file.

Canonical link: https://commits.webkit.org/56910@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66138 268f45cc-cd09-0410-ab3c-d52691b4dbfc