WebCore/plugins/gtk/PluginPackageGtk.cpp
@@ -113,9 +113,9 @@ bool PluginPackage::load()
     GOwnPtr<gchar> finalPath(g_strdup(m_path.utf8().data()));
     while (g_file_test(finalPath.get(), G_FILE_TEST_IS_SYMLINK)) {
         GOwnPtr<GFile> file(g_file_new_for_path(finalPath.get()));
+        GOwnPtr<GFile> dir(g_file_get_parent(file.get()));
         GOwnPtr<gchar> linkPath(g_file_read_link(finalPath.get(), 0));
-
-        GOwnPtr<GFile> resolvedFile(g_file_resolve_relative_path(file.get(), linkPath.get()));
+        GOwnPtr<GFile> resolvedFile(g_file_resolve_relative_path(dir.get(), linkPath.get()));
         finalPath.set(g_file_get_path(resolvedFile.get()));
     }
 
